# impress

./: .dockerignore  .gitignore  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  Tiltfile  docker-compose.yml  docs-0.0.1.tgz  index.yaml  renovate.json  start-kind.sh
src/backend/: .pylintrc  MANIFEST.in  manage.py  pyproject.toml  setup.py
src/backend/core/: admin.py  apps.py  authentication.py  enums.py  factories.py  forms.py  models.py  urls.py  utils.py  views.py
src/backend/core/api/: __init__.py  custom_metrics_collector.py  custom_metrics_exporter.py  custom_probe_views.py  decorators.py  fields.py  filters.py  permissions.py  serializers.py  utils.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py  urls.py
src/backend/core/migrations/: 0001_initial.py  0002_alter_user_language_invitation_and_more.py  0002_create_pg_trgm_extension.py  0003_document_link_reach_document_link_role_and_more.py  0004_migrate_is_public_to_link_reach.py  0005_remove_document_is_public_alter_document_link_reach_and_more.py  0006_add_user_full_name_and_short_name.py  0006_remove_document_is_public_document_is_e2ee_and_more.py  0007_fix_users_duplicate.py  0008_alter_document_link_reach.py  0009_add_document_favorite.py  0010_add_field_creator_to_document.py  0011_populate_creator_field_and_make_it_required.py  0012_make_document_creator_and_invitation_issuer_optional.py  0013_add_tree_structure_to_documents.py  0014_set_path_on_existing_documents.py  0015_add_document_excerpt.py  0016_add_document_deleted_at.py
src/backend/core/services/: ai_services.py  collaboration_services.py  converter_services.py
src/backend/core/static/: reference.docx
src/backend/core/templates/core/: generate_document.html
src/backend/core/tests/: conftest.py  test_api_config.py  test_api_document_accesses.py  test_api_document_invitations.py  test_api_document_versions.py  test_api_team_accesses.py  test_api_template_accesses.py  test_api_users.py  test_api_utils_ai_document_rate_throttles.py  test_api_utils_ai_user_rate_throttles.py  test_authentication_get_or_create_user.py  test_models_document_accesses.py  test_models_documents.py  test_models_invitations.py  test_models_template_accesses.py  test_models_templates.py  test_models_users.py  test_services_ai_services.py  test_services_collaboration_services.py  test_services_converter_services.py  test_statistics.py  test_utils.py  utils.py
src/backend/core/tests/authentication/: test_backends.py
src/backend/core/tests/documents/: test_api_document_accesses.py  test_api_document_accesses_create.py  test_api_document_invitations.py  test_api_document_versions.py  test_api_documents_ai_transform.py  test_api_documents_ai_translate.py  test_api_documents_attachment_upload.py  test_api_documents_children_create.py  test_api_documents_children_list.py  test_api_documents_create.py  test_api_documents_create_for_owner.py  test_api_documents_delete.py  test_api_documents_favorite.py  test_api_documents_link_configuration.py  test_api_documents_list.py  test_api_documents_list_filters.py  test_api_documents_media_auth.py  test_api_documents_move.py  test_api_documents_restore.py  test_api_documents_retrieve.py  test_api_documents_retrieve_auth.py  test_api_documents_update.py
src/backend/core/tests/swagger/: test_openapi_schema.py
src/backend/core/tests/teams/: test_core_api_teams_create.py  test_core_api_teams_delete.py  test_core_api_teams_list.py  test_core_api_teams_retrieve.py  test_core_api_teams_update.py
src/backend/core/tests/templates/: test_api_template_accesses.py  test_api_template_accesses_create.py  (+6 more)
src/backend/demo/: defaults.py  utils.py
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/impress/: celery_app.py  settings.py  urls.py  wsgi.py
src/backend/publish/: celery_app.py  settings.py  urls.py  wsgi.py
(+679 files in other folders)
